homelab/grafana_render/k8s/test/ing-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    spec.ingressClassName: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-server
            port:
              number: 9090
